<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tmdb_fragment"
    tools:context=".Fragments.WellcomeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <!-- Top App Bar !-->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/navigationdrawer_background"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/menu"
                app:title=" "
                tools:ignore="UnusedAttribute">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="0dp"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="center"
                    android:src="@drawable/logopequeno"
                    android:layout_marginStart="0dp" />
            </com.google.android.material.appbar.MaterialToolbar>

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Navigation Drawer !-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_app"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:navGraph="@navigation/app_graph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activities.MainActivity"/>
    </FrameLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/navigation_drawer"
        android:backgroundTint="@color/navigationdrawer_background"
        app:itemTextColor="@color/textColor"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:focusable="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/logopequeno"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>